# email-agent

./: .env.sample  .gitignore  README.md  pyproject.toml  task2.ipynb
src/: main.py
src/email_agent/: __init__.py  email_agent.py  states.py
src/notebooks/: task2.ipynb
